Fix bug with results

--- a/theme/themes/monokai.yaml
+++ b/theme/themes/monokai.yaml
@@ -4,9 +4,6 @@ default:
 comment:
     fg: "#75715E"
     bg: "#282828"
-# identifier:
-#     fg: "#66D9EF"
-#     bg: "#282828"
 constant:
     fg: "#AE81FF"
     bg: "#282828"
@@ -19,12 +16,6 @@ constant.string.char:
 constant.string.escape:
     fg: "#AE81FF"
     bg: "#282828"
-statement:
-    fg: "#F92672"
-    bg: "#282828"
-# symbol.operator:
-#     fg: "#F92672"
-#     bg: "#282828"
 symbol.tag:
     fg: "#AE81FF"
     bg: "#282828"
@@ -46,6 +37,7 @@ special:
 underlined:
     fg: "#D33672"
     bg: "#282828"
+    attr: ["underline"]
 error:
     fg: "#CB4B16"
     bg: "#282828"
